opam-version: "1.2"
name: "ctypes_foreign_libffi"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ctypes"
  "ctypes-foreign"
  "dune"                {build & >= "2.0"}
]
descr: "
An implementation of the Ctypes.FOREIGN interface built on the libffi backend
"

