opam-version: "1.2"
name: "group_map"
version: "dev"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "core_kernel" {>= "v0.14" & < "v0.15" }
  "snarkette"
]
descr: "
Map from finite field elements to elliptic curves points over the finite field
"
