opam-version: "1.2"
name: "h_list"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"                {build & >= "2.0"}
  "ppxlib"              {>= "0.25.0"}
  "base"                {>= "v0.14.3"}
]
descr: "
Heterogeneous lists
"

