opam-version: "1.2"
name: "meja"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ocaml-compiler-libs"
  "ppxlib"
  "ppx_jane"
  "ppx_deriving"
  "dune"                {build & >= "1.0+beta12"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A Reason-ML style language with baked-in support for Snarky
"
