opam-version: "1.2"
name: "meja"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel" {>= "v0.12" & < "v0.13" }
  "ocaml-compiler-libs"
  "ppxlib"
  "ppx_jane"
  "dune"                {build & >= "1.6"}
  "jbuilder"            {build}
]
available: [ ocaml-version >= "4.07.1" ]
descr: "
A Reason-ML style language with baked-in support for Snarky
"
