opam-version: "1.2"
name: "ppx_snarky"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ppxlib"
  "ppx_sexp_conv"
  "dune"                {build & >= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A rewiter for Snarky
"

