opam-version: "1.2"
name: "ppx_snarky"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
url {
  src: "git://github.com/o1-labs/snarky.git"
}
depends: [
  "ocaml" {>= "4.07.0"}
  "core" {>= "v0.12" & < "v0.13" }
  "ppxlib"
  "ppx_tools"
  "ppx_sexp_conv"
  "dune"                {build & >= "2.0"}
]
descr: "
A rewiter for Snarky
"

