opam-version: "1.2"
name: "snarky"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
url {
  src: "git://github.com/o1-labs/snarky.git"
}
depends: [
  "ocaml" {>= "4.07.0"}
  "core_kernel" {>= "v0.12" & < "v0.13" }
  "h_list"
  "fold_lib"
  "tuple_lib"
  "bitstring_lib"
  "interval_union"
  "bignum"
  "base64"
  "yojson" {>= "1.7.0" & < "1.8.0"}
  "ctypes" {>= "0.14" & < "0.18"}
  "ctypes-foreign" {>= "0.4.0" & < "0.5.0"}
  "ppx_snarky"
  "ppx_jane" {>= "v0.12" & < "v0.13"}
  "ppx_deriving" {>= "4.2.1" & < "5.0"}
  "bisect_ppx" {>= "2.0.0"}
  "dune"                {build & >= "2.0"}
]
depopts: [
  "snarky_cuda"
]
descr: "
A snarks DSL
"

