opam-version: "1.2"
name: "snarky_bench"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core" {>= "v0.12" & < "v0.13" }
  "snarky"
  "ppx_jane"
  "ppx_bench"
  "dune"                {build & >= "2.0"}
]
available: [ ocaml-version >= "4.07.0" ]
descr: "
Benchmark runner for snarky
"
