opam-version: "1.2"
name: "sponge"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel" {>= "v0.12" & < "v0.13" }
  "ppx_deriving"
  "ppx_jane"
  "bisect_ppx"
  "dune"                {build & >= "1.6"}
]
available: [ ocaml-version >= "4.07.0" ]
descr: "
A library implementing the arithmetic sponge construction and several sponge-based hash functions
"
