opam-version: "1.2"
name: "tuple_lib"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/snarky"
bug-reports: "https://github.com/o1labs/snarky/issues"
dev-repo: "git+https://github.com/o1labs/snarky.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "core_kernel" {>= "v0.14" & < "v0.15" }
  "ppx_deriving"
  "ppx_jane"
  "bisect_ppx"
  "dune"                {build & >= "2.0"}
]
descr: "
A tiny library with names and a useful getter for tuples
"
